# DiffuPy

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .travis.yml  AUTHORS.rst  LICENSE  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py  tox.ini
data/scores_test/: output_scores.csv  output_z_scores.csv
diffupy/tests/: constants.py
docs/: Makefile
docs/source/: cli.rst  conf.py  constants.rst  diffusion.rst  index.rst  installation.rst  intro.rst  kernel.rst  kernels.rst  matrix.rst  preprocessing.rst  usage.rst
examples/: README.rst
examples/datasets/: node.csv  node_type.csv  sample_dataset.csv  sample_dataset_with_expr.csv  sample_dataset_with_expr_and_p_value.csv  sample_dataset_with_ids.csv  sample_dataset_with_logfc.csv
examples/networks/: sample_network.csv  sample_network_2.csv
examples/scripts/: example2.sh
notebooks/: Isolated nodes.ipynb  ValidationSet1_kegg.ipynb  ValidationSet1_no_flatten.ipynb  diffuseRawScoresPy.ipynb  diffuseRawScoresR.ipynb  diffuseScoresMethodsPy.ipynb  diffuseScoresPy.ipynb  diffuseScoresR.ipynb  global_database_comparison.ipynb  kernelsPy.ipynb  kernelsR.ipynb  kernels_py.ipynb  no_issolates.ipynb  validationSet1.ipynb  validationSet1_draft.ipynb  validationSet1_minimal.ipynb  validationSet1_subsets.ipynb  validationSet1_subsets_minimal.ipynb
notebooks/.ipynb_checkpoints/: kernelsR-checkpoint.ipynb  kernels_py-checkpoint.ipynb
notebooks/04_unit_testing/: commuteTimeKernel.csv
notebooks/diffusion/: diffuseRawScoresPy.ipynb  diffuseRawScoresR.ipynb  diffuseScoresMethodsPy.ipynb  diffuseScoresR.ipynb
notebooks/kernels/: kernelsPy.ipynb  kernelsR.ipynb
notebooks/scores_test/: input_scores.csv  output_scores.csv  output_z_scores.csv
notebooks/validation/: set1.xlsx
src/diffuPy/: __init__.py  cli.py  diffuse.py  diffuse_raw.py  input_mapping.py  kernels.py  matrix.py  miscellaneous.py  utils.py  validate_inputs.py  validation_sets_utils.py  views.py
src/diffupy/: __init__.py  __main__.py  checkers.py  cli.py  constants.py  cross_validation.py  diffuse.py  diffuse_raw.py  input_mapping.py  utils.py  (+13 more)
tests/: __init__.py  constants.py  diffu_tests.py  diffusion_tests.py  kernel_tests.py  test_diffusion.py  test_input.py  test_kernel.py  tests.py  validate_inputs_tests.py  validator_tests.py
(+22 files in other folders)
