##########################
# Setup.py Configuration #
##########################
[metadata]
name = diffupy
version = 0.0.1-dev
description = Compute diffusion scores over networks
long_description = file: README.rst

# URLs associated with PyBEL
url = https://github.com/jmarinllao/diffupy
download_url = https://github.com/jmarinllao/diffupy
project_urls =
    Bug Tracker = https://github.com/jmarinllao/diffupy/issues
    Source Code = https://github.com/jmarinllao/diffupy
	Documentation = https://diffupy.readthedocs.io

# Author information
author = Josep Marín-Llaó, Sergi Picart Armada, Daniel Domingo-Fernández
author_email = josepmarinllao@gmail.com
maintainer = Josep Marín-Llaó
maintainer_email = josepmarinllao@gmail.com

# License Information
license = Apache 2.0 License
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
	Environment :: Console
    Intended Audience :: Developers
	Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
	Topic :: Scientific/Engineering :: Bio-Informatics
	Topic :: Scientific/Engineering :: Mathematics
keywords =
    Heat Diffusion
	Systems Biology
	Networks Biology

[options]
install_requires =
    networkx>=2.1
    numpy
    scipy

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.5

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
	sphinx
	sphinx-rtd-theme
	sphinx-click
	sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    diffupy = diffupy.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = diffupy

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
